<resources>
    <string name="app_name">Beauty Saloon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Choose Role</string>
    <string name="second_fragment_label">Client Home Page</string>
    <string name="third_fragment_label">Employee Home Page</string>
    <string name="appointment_form_label">Appointment Form</string>
    <string name="appointments_list_label">Appointments List</string>
    <string name="appointment_details_label">Appointment Details</string>
    <string name="appointment_created_label">Appointment Created</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>